--- a/_posts/2018-07-19-OneDriveFilesExternally.html
+++ b/_posts/2018-07-19-OneDriveFilesExternally.html
@@ -15,7 +15,7 @@ background: '/img/posts/05.jpg'
 
 <p>Great question! Below is an example of the secure settings you can set!</p>
 
-<img class="img-fluid" src="/img/post/Sharing_Externally.JPG" alt="Demo Image">
+<img class="img-fluid" src="/img/post/Sharing_Externally.jpg" alt="One Drive Sharing">
 <span class="caption text-muted">Example of sharing options.</span>
 
 <h2 class="section-heading">Secure Settings</h2>
