--- a/_posts/2018-07-19-OneDriveFilesExternally.html
+++ b/_posts/2018-07-19-OneDriveFilesExternally.html
@@ -5,7 +5,7 @@ date:   2018-07-19
 background: '/img/posts/05.jpg'
 ---
 
-<strong>Sharing files outside of your orginization was always a headache. One of the biggest headaches was ensuring the files were secure as well as ensuring the files can not be manipulated. Fear no more, OneDrive is here to HELP!</strong>
+<p style="background-color:grey;">Sharing files outside of your orginization was always a headache. One of the biggest headaches was ensuring the files were secure as well as ensuring the files can not be manipulated. Fear no more, OneDrive is here to HELP!</p>
 
 <h2 class="section-heading">Why use OneDrive to share files Externally?</h2>
 
