--- a/_posts/2018-07-19-OneDriveFilesExternally.html
+++ b/_posts/2018-07-19-OneDriveFilesExternally.html
@@ -28,5 +28,5 @@ background: '/img/posts/05.jpg'
 
 <p>Over the many years of being in technology, it has always come up from end users to be able to share documents externally. This allows orginizations to utilize the many features of their Office 365 suite securely and without any additonal costs.</p>
 
-<blockquote class="blockquote">Alone we can do so little; together we can do so much</blockquote>
+<blockquote class="blockquote">"Alone we can do so little; together we can do so much" - Helen Keller</blockquote>
 
